# Novel-Engine

./: .actrc  .actrc.example  .actrc.local  .ai-guard  .coveragerc  .cursorrules  .dockerignore  .editorconfig  .env.example  .env.local  .env.production  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rgignore  .secrets.baseline  .terraformignore  =0.29.0  =2.0.0  ACT_CLI_VALIDATION.md  ACT_CLI_VALIDATION_REPORT.md  AGENTS.md  AGENT_2_TEST_SUMMARY.md  API_PRODUCTION_READINESS_REPORT.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_Linus.md  A_PLUS_ACHIEVEMENT.md  A_PLUS_COMPLIANCE_REPORT.md  CHANGELOG.md  CI_CD_AUDIT_REPORT.md  CI_QUALITY_GATES_IMPLEMENTATION.md  CLAUDE.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_ITERATION_1_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_PRODUCTION_READINESS_CERTIFICATION.md  COMPREHENSIVE_REMEDIATION_COMPLETE.md  (+420 more)
.bmad-core/: install-manifest.yaml
.claude/: ACT_SETUP.md  ACT_STATUS.md  phase3-week4-progress.md  settings.local.json
.githooks/: pre-push
.github/: CODEOWNERS  README.md  SECURITY.md  act-secrets.sample  act.env  codeql-config.yml  dependabot.yml  pull_request_template.md
.pyramid-history/: 2025-11-25.json
.trunk/: trunk.yaml
.venv-ci/: pyvenv.cfg
ai_testing/: FAILURE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETION_REPORT.md  PROJECT_GOALS.md  REFACTORING_PLAN.md  REFACTOR_PLAN.md  SOLUTION_SUMMARY.md  SUPERCLAUDE_COMMANDS.md  TEST_VALIDATION_SUMMARY.md  VALIDATION_STRATEGY.md  WAVE_MODE_REPORT.md  _final_integration_test.py.disabled  _test_wave3_improvements.py.disabled  ai_browser_control.py  ai_complete_workflow.py  ai_novel_system.py  ai_novel_system_v2.py  complete_workflow_test.py  config.py  dialogue_engine.py  event_orchestrator.py  final_integration_test.py  story_architect.py  test_real_ai_generation.py  test_wave3_improvements.py  test_wave_mode_improvements.py
alembic/: env.py
apps/: __init__.py
campaigns/: campaign_1d5adcf5.json  campaign_25052d50.json  campaign_2a08d06a.json  campaign_2b6a62e3.json  campaign_32705b9b.json  campaign_33c74115.json  campaign_3a7b3527.json  campaign_3bfb81d6.json  campaign_3f03442a.json  campaign_4495c6f0.json  campaign_46313992.json  campaign_46e2a9ae.json  campaign_47c5d7f8.json  campaign_4e0a5f46.json  campaign_4ef2237c.json  campaign_4f0276bc.json  campaign_57d52d43.json  campaign_5da4efc6.json  campaign_5f4b460d.json  campaign_61a5c514.json  campaign_638e9cf1.json  campaign_67b0ceeb.json  campaign_68222327.json  campaign_68ef0ae8.json  campaign_6908f924.json  campaign_694e88b5.json  campaign_6ba1964a.json  campaign_73efff68.json  campaign_74011f8f.json  campaign_80e65853.json  campaign_8256e770.json  campaign_86e1352e.json  campaign_89bdf9f7.json  campaign_8e8619c3.json  campaign_9032d85e.json  campaign_90c14bf3.json  campaign_91030aaa.json  campaign_99768e49.json  campaign_9d824d4e.json  campaign_9e509329.json  (+15 more)
config/: development.yaml  honcho.yaml  production.yaml  security.yaml  testing.yaml
configs/: INDEX.md  README.md  __init__.py  config_environment_loader.py
contexts/: __init__.py
core_platform/: __init__.py
data/: alerts.db  api_server.db  api_server.db-shm  api_server.db-wal  app_cache.db  complete_demo.db  novel_engine.db-shm  novel_engine.db-wal  optimized_api_server.db  performance_test_results.db
deliverables/: ACCEPTANCE_SIGNOFF.md  EXECUTIVE_SUMMARY.md
demo_narratives/: campaign_log_narrative_20250727_003001.md  campaign_log_narrative_20250727_090402.md  campaign_log_narrative_20250727_100915.md  campaign_log_narrative_20250814_000322.md  campaign_log_narrative_20250814_000332.md  campaign_log_narrative_20250814_095230.md  campaign_log_narrative_20250814_095239.md  campaign_log_narrative_20250814_095246.md  campaign_log_narrative_20250814_095252.md  campaign_log_narrative_20250814_100559.md  campaign_log_narrative_20250814_120255.md  campaign_log_narrative_20250814_130014.md  large_campaign_log_narrative_20250727_113618.md  large_campaign_log_narrative_20250727_113820.md  large_campaign_log_narrative_20250727_150039.md  large_campaign_log_narrative_20250727_150155.md  large_campaign_log_narrative_20250727_154526.md  large_campaign_log_narrative_20250727_194643.md  large_campaign_log_narrative_20250727_194808.md  large_campaign_log_narrative_20250727_194900.md  large_campaign_log_narrative_20250727_195202.md  large_campaign_log_narrative_20250727_201813.md  large_campaign_log_narrative_20250727_202207.md  large_campaign_log_narrative_20250727_202507.md  large_campaign_log_narrative_20250727_203603.md  large_campaign_log_narrative_20250727_204009.md  large_campaign_log_narrative_20250727_204354.md  large_campaign_log_narrative_20250727_211030.md  large_campaign_log_narrative_20250727_211552.md  large_campaign_log_narrative_20250728_090615.md  large_campaign_log_narrative_20250728_092753.md  large_campaign_log_narrative_20250728_093022.md  large_campaign_log_narrative_20250728_124932.md  large_campaign_log_narrative_20250728_125834.md  large_campaign_log_narrative_20250728_202051.md  large_campaign_log_narrative_20250728_202206.md  large_campaign_log_narrative_20250728_202416.md  large_campaign_log_narrative_20250728_213655.md  large_campaign_log_narrative_20250729_103447.md  large_campaign_log_narrative_20250729_104625.md  (+387 more)
demo_output/: MULTI_AGENT_DEMO_REPORT.md
deploy/: INDEX.md  README.md  __init__.py  utils.py
deployment/: __init__.py  deploy_staging.py
docker/: .dockerignore  Dockerfile  Dockerfile.production  docker-compose.enterprise.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
docs/: AGENT_BROWSER_INSTRUCTIONS.md  API_DOCUMENTATION.md  API_SPECIFICATION.md  ARCHITECTURE_OVERVIEW.md  Architecture_Blueprint.md  COMPONENT_GUIDE.md  COMPREHENSIVE_DOCUMENTATION.md  CONTEXT.md  DEBUGGING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESIGN_FRONTEND_UX.md  DESIGN_PRODUCTION_DEPLOYMENT.md  DESIGN_REALTIME_COLLABORATION.md  DESIGN_USER_MANAGEMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_IMPROVEMENT_SUMMARY.md  DOMAIN_EVENTS.md  EVALUATION.md  (+37 more)
(+4557 files in other folders)
